test/cases/structs/sizeof_before_complete.c
// RUN: %check -e %s

struct A
{
	int x : sizeof(struct A); // CHECK: error: sizeof incomplete type struct A
};
